Changed dark mode to Rose Pine. Fixed "Published on" to "Published"

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,19 +1,19 @@
 body {
-  --bg-main: #FFFFFF;
-  --bg-sub: #FAFAFC;
-  --color-bis: #363636;
-  --text-main: #18181C;
-  --text-sub: #5D5D67;
-  --link: #2380ED;
-  --border: #E5E5E5;
+  --bg-main: #fffaf3;
+  --bg-sub: #faf4ed;
+  --color-bis: #575279;
+  --text-main: #575279;
+  --text-sub: #797593;
+  --link: #ea9d34;
+  --border: #f2e9e1;
 }
 
 body.dark {
-  --bg-main: #18181C;
-  --bg-sub: #262626;
-  --color-bis: #E6E6E6;
-  --text-main: #FAFAFC;
-  --text-sub: #FFFFFF;
-  --link: #6D9EFF;
-  --border: #353535;
+  --bg-main: #1f1d2e;
+  --bg-sub: #191724;
+  --color-bis: #e0def4;
+  --text-main: #908caa;
+  --text-sub: #6e6a86;
+  --link: #f6c177;
+  --border: #26233a;
 }
